k8s/postgres-deployment.yaml
# nosemgrep: yaml.kubernetes.security.run-as-non-root.run-as-non-root

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 999       
      #   fsGroup: 999
      
      containers:
        - name: postgres
          image: postgres:16
          
          securityContext:
            allowPrivilegeEscalation: false
          #   runAsNonRoot: true
          #   runAsUser: 999
          #   capabilities:
          #     drop:
          #       - ALL
          
          ports:
            - containerPort: 5432
          
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      
      volumes:
        - name: postgres-storage
          emptyDir: {}
