k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agenda-app
spec:
  type: NodePort
  selector:
    app: agenda-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
